aa-sdk: turned off some compiler flags in configure.ac

--- a/configure.ac
+++ b/configure.ac
@@ -243,13 +243,13 @@ lldp_ARG_WITH([lldpd-ctl-socket], [Path to socket for communication with lldpd],
 lldp_ARG_WITH([lldpd-pid-file], [Path to lldpd PID file], [${runstatedir}/lldpd.pid])
 
 # CDP/FDP/EDP/SONMP
-lldp_ARG_ENABLE([cdp], [Cisco Discovery Protocol], [yes])
-lldp_ARG_ENABLE([fdp], [Foundry Discovery Protocol], [yes])
-lldp_ARG_ENABLE([edp], [Extreme Discovery Protocol], [yes])
-lldp_ARG_ENABLE([sonmp], [SynOptics Network Management Protocol], [yes])
+lldp_ARG_ENABLE([cdp], [Cisco Discovery Protocol], [no])
+lldp_ARG_ENABLE([fdp], [Foundry Discovery Protocol], [no])
+lldp_ARG_ENABLE([edp], [Extreme Discovery Protocol], [no])
+lldp_ARG_ENABLE([sonmp], [SynOptics Network Management Protocol], [no])
 
 # LLDPMED/Dot1/Dot3/AA
-lldp_ARG_ENABLE([lldpmed], [LLDP-MED extension], [yes])
+lldp_ARG_ENABLE([lldpmed], [LLDP-MED extension], [no])
 lldp_ARG_ENABLE([dot1], [Dot1 extension (VLAN stuff)], [yes])
 lldp_ARG_ENABLE([dot3], [Dot3 extension (PHY stuff)], [yes])
 lldp_ARG_ENABLE([aa],[Auto Attach extension], [yes])
