--- a/src/daemon/Makefile.am
+++ b/src/daemon/Makefile.am
@@ -1,4 +1,6 @@
 AM_CFLAGS = -I $(top_srcdir)/include
+AM_AASDK_ROOTDIR = ../../..
+AM_CFLAGS += -I$(AM_AASDK_ROOTDIR)/common/common  -I$(AM_AASDK_ROOTDIR)/transport/common   -I$(AM_AASDK_ROOTDIR)/platform/posix  -I$(AM_AASDK_ROOTDIR)/common/agent 
 BUILT_SOURCES =
 CLEANFILES =
 
@@ -20,6 +22,26 @@ liblldpd_la_SOURCES  = \
 	interfaces.c \
 	event.c lldpd.c \
 	pattern.c \
+	$(AM_AASDK_ROOTDIR)/transport/common/aatrans_packet_comm.c \
+        $(AM_AASDK_ROOTDIR)/transport/common/aatrans_trace_comm.c \
+        $(AM_AASDK_ROOTDIR)/transport/common/aatrans_comm.c  \
+        $(AM_AASDK_ROOTDIR)/common/common/aasdk_comm.c \
+        $(AM_AASDK_ROOTDIR)/common/agent/aa_agent.c \
+        $(AM_AASDK_ROOTDIR)/platform/posix/aasdk_osif_plat.c \
+        $(AM_AASDK_ROOTDIR)/common/agent/aa_public.c \
+        $(AM_AASDK_ROOTDIR)/common/common/aasdk_time_comm.c \
+        $(AM_AASDK_ROOTDIR)/common/agent/aa_port.c \
+        $(AM_AASDK_ROOTDIR)/common/agent/aa_snmpagt.c \
+        $(AM_AASDK_ROOTDIR)/platform/posix/aasdk_lldpif_plat.c \
+        $(AM_AASDK_ROOTDIR)/platform/posix/aasdk_time_plat.c \
+        $(AM_AASDK_ROOTDIR)/common/common/aasdk_port_comm.c \
+        $(AM_AASDK_ROOTDIR)/platform/posix/aasdk_msgif_plat.c \
+        $(AM_AASDK_ROOTDIR)/common/common/aasdk_msg_comm.c \
+        $(AM_AASDK_ROOTDIR)/transport/common/aatrans_port_comm.c \
+        $(AM_AASDK_ROOTDIR)/transport/common/aatrans_elem_comm.c \
+        $(AM_AASDK_ROOTDIR)/common/agent/aa_server.c \
+        $(AM_AASDK_ROOTDIR)/common/common/aasdk_lldpif_comm.c \
+        $(AM_AASDK_ROOTDIR)/common/common/aasdk_elem_comm.c \
 	probes.d trace.h
 liblldpd_la_CFLAGS   = $(AM_CFLAGS) @LIBEVENT_CFLAGS@
 liblldpd_la_CPPFLAGS = -DSYSCONFDIR='"$(sysconfdir)"' -DLLDPCLI_PATH='"$(sbindir)/lldpcli"'
@@ -114,6 +136,7 @@ liblldpd_la_CFLAGS  += @SECCOMP_CFLAGS@
 liblldpd_la_LIBADD  += @SECCOMP_LIBS@
 endif
 
+liblldpd_la_LIBADD  += -lpthread -lrt
 ## Systemtap/DTrace
 EXTRA_DIST = dtrace2systemtap.awk
 if ENABLE_SYSTEMTAP
